// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`@cssxjs/babel-plugin-rn-stylename-inline Aliasing css and styl: Aliasing css and styl 1`] = `

import React from 'react'
import { css as myCss, styl as myStyl, observer } from 'cssxjs'

export default observer(function Card () {
  myStyl\`
    .card
      color blue
  \`
  return <View styleName='card' />
})

myCss\`
  .card {
    color: red;
    background-color: green;
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css as myCss, styl as myStyl, observer } from "cssxjs";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_d20fva",
  contentHash: "cssx_9sdtvn",
  rules: [
    {
      selector: ".card",
      tag: null,
      classes: ["card"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "color",
          value: "red",
          raw: "color: red",
          order: 0,
          line: 3,
          column: 5,
        },
        {
          property: "background-color",
          value: "green",
          raw: "background-color: green",
          order: 1,
          line: 4,
          column: 5,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -1564835170,
};
const _localCssInstance = {
  version: 1,
  id: "cssx_6737ah",
  contentHash: "cssx_bj97x3",
  rules: [
    {
      selector: ".card",
      tag: null,
      classes: ["card"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "color",
          value: "#00f",
          raw: "color: #00f",
          order: 0,
          line: 2,
          column: 3,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: 2093078773,
};
export default observer(function Card() {
  const __CSS_LOCAL__ = _localCssInstance;
  return <View styleName="card" />;
});


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Custom magic import. Simple: Custom magic import. Simple 1`] = `

import React from 'react'
import { css, observer } from 'startupjs'

export default observer(function Card () {
  return <View styleName='card' />
})

css\`
  .card {
    color: red;
    background-color: green;
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css, observer } from "startupjs";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_d20fva",
  contentHash: "cssx_9sdtvn",
  rules: [
    {
      selector: ".card",
      tag: null,
      classes: ["card"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "color",
          value: "red",
          raw: "color: red",
          order: 0,
          line: 3,
          column: 5,
        },
        {
          property: "background-color",
          value: "green",
          raw: "background-color: green",
          order: 1,
          line: 4,
          column: 5,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -1564835170,
};
export default observer(function Card() {
  return <View styleName="card" />;
});


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Global and local css and styl. Several components: Global and local css and styl. Several components 1`] = `

import React from 'react'
import { css, styl } from 'cssxjs'
import { View } from 'react-native'

export default function Card () {
  return <View styleName='root active'><Line /></View>

  styl\`
    .root
      padding 8px 16px
  \`
}

function Line () {
  return <View styleName='root' />

  css\`
    .root {
      margin-top: 16px;
      border-radius: 8px;
    }
  \`
}

styl\`
  .active
    background-color red
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css, styl } from "cssxjs";
import { View } from "react-native";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_e4ok3b",
  contentHash: "cssx_sae16k",
  rules: [
    {
      selector: ".active",
      tag: null,
      classes: ["active"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "background-color",
          value: "#f00",
          raw: "background-color: #f00",
          order: 0,
          line: 2,
          column: 3,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: 2075491085,
};
const _localCssInstance2 = {
  version: 1,
  id: "cssx_8a2l4b",
  contentHash: "cssx_fubghw",
  rules: [
    {
      selector: ".root",
      tag: null,
      classes: ["root"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "margin-top",
          value: "16px",
          raw: "margin-top: 16px",
          order: 0,
          line: 3,
          column: 7,
        },
        {
          property: "border-radius",
          value: "8px",
          raw: "border-radius: 8px",
          order: 1,
          line: 4,
          column: 7,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: 1014023389,
};
const _localCssInstance = {
  version: 1,
  id: "cssx_94aplp",
  contentHash: "cssx_j0akch",
  rules: [
    {
      selector: ".root",
      tag: null,
      classes: ["root"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "padding",
          value: "8px 16px",
          raw: "padding: 8px 16px",
          order: 0,
          line: 2,
          column: 3,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -1276586605,
};
export default function Card() {
  const __CSS_LOCAL__ = _localCssInstance;
  return (
    <View styleName="root active">
      <Line />
    </View>
  );
}
function Line() {
  const __CSS_LOCAL__ = _localCssInstance2;
  return <View styleName="root" />;
}


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Global and local css. Several components: Global and local css. Several components 1`] = `

import React from 'react'
import { css } from 'cssxjs'
import { View } from 'react-native'

export default function Card () {
  return <View styleName='root active'><Line /></View>

  css\`
    .root {
      padding: 8px 16px;
    }
  \`
}

function Line () {
  return <View styleName='root' />

  css\`
    .root {
      margin-top: 16px;
      border-radius: 8px;
    }
  \`
}

css\`
  .active {
    background-color: red;
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css } from "cssxjs";
import { View } from "react-native";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_fgl1hb",
  contentHash: "cssx_62w8qm",
  rules: [
    {
      selector: ".active",
      tag: null,
      classes: ["active"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "background-color",
          value: "red",
          raw: "background-color: red",
          order: 0,
          line: 3,
          column: 5,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: 230283094,
};
const _localCssInstance2 = {
  version: 1,
  id: "cssx_8a2l4b",
  contentHash: "cssx_fubghw",
  rules: [
    {
      selector: ".root",
      tag: null,
      classes: ["root"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "margin-top",
          value: "16px",
          raw: "margin-top: 16px",
          order: 0,
          line: 3,
          column: 7,
        },
        {
          property: "border-radius",
          value: "8px",
          raw: "border-radius: 8px",
          order: 1,
          line: 4,
          column: 7,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: 1014023389,
};
const _localCssInstance = {
  version: 1,
  id: "cssx_e3vlw8",
  contentHash: "cssx_7lhxx3",
  rules: [
    {
      selector: ".root",
      tag: null,
      classes: ["root"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "padding",
          value: "8px 16px",
          raw: "padding: 8px 16px",
          order: 0,
          line: 3,
          column: 7,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -985409394,
};
export default function Card() {
  const __CSS_LOCAL__ = _localCssInstance;
  return (
    <View styleName="root active">
      <Line />
    </View>
  );
}
function Line() {
  const __CSS_LOCAL__ = _localCssInstance2;
  return <View styleName="root" />;
}


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Global css. Several components: Global css. Several components 1`] = `

import React from 'react'
import { css } from 'cssxjs'
import { View } from 'react-native'

export default function Card () {
  return <View styleName='card active'><Line /></View>
}

function Line () {
  return <View styleName='line' />
}

css\`
  .card {
    padding: 8px 16px;
  }
  .line {
    margin-top: 16px;
    border-radius: 8px;
  }
  .active {
    background-color: red;
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css } from "cssxjs";
import { View } from "react-native";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_5snslk",
  contentHash: "cssx_c10gwr",
  rules: [
    {
      selector: ".card",
      tag: null,
      classes: ["card"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "padding",
          value: "8px 16px",
          raw: "padding: 8px 16px",
          order: 0,
          line: 3,
          column: 5,
        },
      ],
    },
    {
      selector: ".line",
      tag: null,
      classes: ["line"],
      part: null,
      specificity: 1,
      order: 1,
      media: null,
      declarations: [
        {
          property: "margin-top",
          value: "16px",
          raw: "margin-top: 16px",
          order: 0,
          line: 6,
          column: 5,
        },
        {
          property: "border-radius",
          value: "8px",
          raw: "border-radius: 8px",
          order: 1,
          line: 7,
          column: 5,
        },
      ],
    },
    {
      selector: ".active",
      tag: null,
      classes: ["active"],
      part: null,
      specificity: 1,
      order: 2,
      media: null,
      declarations: [
        {
          property: "background-color",
          value: "red",
          raw: "background-color: red",
          order: 0,
          line: 10,
          column: 5,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: 1060737560,
};
export default function Card() {
  return (
    <View styleName="card active">
      <Line />
    </View>
  );
}
function Line() {
  return <View styleName="line" />;
}


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Global css. Simple: Global css. Simple 1`] = `

import React from 'react'
import { css, observer } from 'cssxjs'

export default observer(function Card () {
  return <View styleName='card' />
})

css\`
  .card {
    color: red;
    background-color: green;
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css, observer } from "cssxjs";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_d20fva",
  contentHash: "cssx_9sdtvn",
  rules: [
    {
      selector: ".card",
      tag: null,
      classes: ["card"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "color",
          value: "red",
          raw: "color: red",
          order: 0,
          line: 3,
          column: 5,
        },
        {
          property: "background-color",
          value: "green",
          raw: "background-color: green",
          order: 1,
          line: 4,
          column: 5,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -1564835170,
};
export default observer(function Card() {
  return <View styleName="card" />;
});


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Global styl. Several components: Global styl. Several components 1`] = `

import React from 'react'
import { styl } from 'cssxjs'
import { View } from 'react-native'

export default function Card () {
  return <View styleName='card active'><Line /></View>
}

function Line () {
  return <View styleName='line' />
}

styl\`
  .card
    padding 8px 16px
  .line
    margin-top 16px
    border-radius 8px
  .active
    background-color red
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { styl } from "cssxjs";
import { View } from "react-native";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_ccmade",
  contentHash: "cssx_oj63s5",
  rules: [
    {
      selector: ".card",
      tag: null,
      classes: ["card"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "padding",
          value: "8px 16px",
          raw: "padding: 8px 16px",
          order: 0,
          line: 2,
          column: 3,
        },
      ],
    },
    {
      selector: ".line",
      tag: null,
      classes: ["line"],
      part: null,
      specificity: 1,
      order: 1,
      media: null,
      declarations: [
        {
          property: "margin-top",
          value: "16px",
          raw: "margin-top: 16px",
          order: 0,
          line: 5,
          column: 3,
        },
        {
          property: "border-radius",
          value: "8px",
          raw: "border-radius: 8px",
          order: 1,
          line: 6,
          column: 3,
        },
      ],
    },
    {
      selector: ".active",
      tag: null,
      classes: ["active"],
      part: null,
      specificity: 1,
      order: 2,
      media: null,
      declarations: [
        {
          property: "background-color",
          value: "#f00",
          raw: "background-color: #f00",
          order: 0,
          line: 9,
          column: 3,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -49838010,
};
export default function Card() {
  return (
    <View styleName="card active">
      <Line />
    </View>
  );
}
function Line() {
  return <View styleName="line" />;
}


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Global styl. Simple: Global styl. Simple 1`] = `

import React from 'react'
import { styl, observer } from 'cssxjs'

export default observer(function Card () {
  return <View styleName='card' />
})

styl\`
  .card
    color red
    background-color green
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { styl, observer } from "cssxjs";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_5vvl7n",
  contentHash: "cssx_ask4pp",
  rules: [
    {
      selector: ".card",
      tag: null,
      classes: ["card"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "color",
          value: "#f00",
          raw: "color: #f00",
          order: 0,
          line: 2,
          column: 3,
        },
        {
          property: "background-color",
          value: "#008000",
          raw: "background-color: #008000",
          order: 1,
          line: 3,
          column: 3,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -1776916804,
};
export default observer(function Card() {
  return <View styleName="card" />;
});


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Local css interpolation declared after early return. Should error: Local css interpolation declared after early return. Should error 1`] = `

import React from 'react'
import { css } from 'cssxjs'
import { View } from 'react-native'
import { useThemeColor } from './theme'

export default function Card ({ ready }) {
  if (!ready) return <View styleName='loader' />
  const color = useThemeColor('primary')
  return <View styleName='root' />

  css\`
    .loader {
      color: \${color};
    }
    .root {
      color: \${color};
    }
  \`
}

      ↓ ↓ ↓ ↓ ↓ ↓

SyntaxError: unknown file: [@cssxjs/babel-plugin-rn-stylename-inline] Interpolated CSS value "color" is not available before the first return that can use local styles.
Move the declaration before the first styled return, or pass the value through props/CSS variables.
   9 |   return <View styleName='root' />
  10 |
> 11 |   css\`
     |   ^
  12 |     .loader {
  13 |       color: \${color};
  14 |     }

`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Local css interpolation: Local css interpolation 1`] = `

import React from 'react'
import { css } from 'cssxjs'
import { View } from 'react-native'
import { useThemeColor } from './theme'

export default function Card ({ ready, pad }) {
  const color = useThemeColor('primary')
  if (!ready) return <View styleName='loader' />
  return <View styleName='root' />

  css\`
    .loader {
      color: \${color};
    }
    .root {
      color: \${color};
      padding: \${pad} 2u;
    }
  \`
}

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css } from "cssxjs";
import { View } from "react-native";
import { useThemeColor } from "./theme";
const _localCssInstance = {
  version: 1,
  id: "cssx_h9kswq",
  contentHash: "cssx_ytmomb",
  rules: [
    {
      selector: ".loader",
      tag: null,
      classes: ["loader"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "color",
          value: "var(--__cssx_dynamic_0)",
          raw: "color: var(--__cssx_dynamic_0)",
          order: 0,
          dynamicSlots: [0],
          line: 3,
          column: 7,
        },
      ],
    },
    {
      selector: ".root",
      tag: null,
      classes: ["root"],
      part: null,
      specificity: 1,
      order: 1,
      media: null,
      declarations: [
        {
          property: "color",
          value: "var(--__cssx_dynamic_1)",
          raw: "color: var(--__cssx_dynamic_1)",
          order: 0,
          dynamicSlots: [1],
          line: 6,
          column: 7,
        },
        {
          property: "padding",
          value: "var(--__cssx_dynamic_2) 2u",
          raw: "padding: var(--__cssx_dynamic_2) 2u",
          order: 1,
          dynamicSlots: [2],
          line: 7,
          column: 7,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: true,
    vars: ["--__cssx_dynamic_0", "--__cssx_dynamic_1", "--__cssx_dynamic_2"],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: true,
    hasDynamicRuntimeDependencies: true,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -210124161,
};
export default function Card({ ready, pad }) {
  const color = useThemeColor("primary");
  const __CSS_LOCAL__ = {
    sheet: _localCssInstance,
    values: [color, color, pad],
  };
  if (!ready) return <View styleName="loader" />;
  return <View styleName="root" />;
}


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Reachable local css interpolation after early return. Should error: Reachable local css interpolation after early return. Should error 1`] = `

import React from 'react'
import { css } from 'cssxjs'
import { View } from 'react-native'
import { useThemeColor } from './theme'

export default function Card ({ ready }) {
  if (!ready) return <View styleName='loader' />
  const color = useThemeColor('primary')

  css\`
    .root {
      color: \${color};
    }
  \`

  return <View styleName='root' />
}

      ↓ ↓ ↓ ↓ ↓ ↓

SyntaxError: unknown file: [@cssxjs/babel-plugin-rn-stylename-inline] Local css/styl templates must be declared before the first return, unless they are trailing CSSX style blocks at the end of the component.
Move this template before the first return, or place it after all returns as the final component statement.
   8 |   const color = useThemeColor('primary')
   9 |
> 10 |   css\`
     |   ^
  11 |     .root {
  12 |       color: \${color};
  13 |     }

`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Reachable local css interpolation before return: Reachable local css interpolation before return 1`] = `

import React from 'react'
import { css } from 'cssxjs'
import { View } from 'react-native'
import { useThemeColor } from './theme'

export default function Card ({ pad }) {
  const color = useThemeColor('primary')

  css\`
    .root {
      color: \${color};
      padding: \${pad} 2u;
    }
  \`

  return <View styleName='root' />
}

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css } from "cssxjs";
import { View } from "react-native";
import { useThemeColor } from "./theme";
const _localCssInstance = {
  version: 1,
  id: "cssx_fjh55d",
  contentHash: "cssx_4m17p8",
  rules: [
    {
      selector: ".root",
      tag: null,
      classes: ["root"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "color",
          value: "var(--__cssx_dynamic_0)",
          raw: "color: var(--__cssx_dynamic_0)",
          order: 0,
          dynamicSlots: [0],
          line: 3,
          column: 7,
        },
        {
          property: "padding",
          value: "var(--__cssx_dynamic_1) 2u",
          raw: "padding: var(--__cssx_dynamic_1) 2u",
          order: 1,
          dynamicSlots: [1],
          line: 4,
          column: 7,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: true,
    vars: ["--__cssx_dynamic_0", "--__cssx_dynamic_1"],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: true,
    hasDynamicRuntimeDependencies: true,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: 762895511,
};
export default function Card({ pad }) {
  const color = useThemeColor("primary");
  const __CSS_LOCAL__ = {
    sheet: _localCssInstance,
    values: [color, pad],
  };
  return <View styleName="root" />;
}


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Should remove css and styl from cssxjs import: Should remove css and styl from cssxjs import 1`] = `

import React from 'react'
import { css, observer, styl } from 'cssxjs'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css, observer, styl } from "cssxjs";


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Should remove the whole lib if no other things are left in cssxjs: Should remove the whole lib if no other things are left in cssxjs 1`] = `

import React from 'react'
import { css, styl } from 'cssxjs'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css, styl } from "cssxjs";


`;
